--- a/src/components/UploadBtn/UploadBtn.scss
+++ b/src/components/UploadBtn/UploadBtn.scss
@@ -39,5 +39,15 @@
   &__icon {
     padding-left: 0.5rem;
     padding-right: 1rem;
+
+    &__text {
+      margin: auto;
+      @include medium {
+        margin: 0;
+      }
+      @include large {
+        margin: 0;
+      }
+    }
   }
 }
